kubernetes/registry/deployment-registry.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: registry
  namespace: default
  labels:
    app: registry
spec:
  replicas: 1
  selector:
    matchLabels:
      app: registry
  template:
    metadata:
      labels:
        app: registry
    spec:
      containers:
      - image: registry:2
        name: registry
        ports:
        - containerPort: 5000
          name: registry
        volumeMounts:
        - name: registry-storage
          mountPath: /var/lib/registry
        resources:
          limits:
            memory: "1Gi"
            cpu: "500m"
          requests:
            memory: "512Mi"
            cpu: "250m"
      volumes:
      - name: registry-storage
        persistentVolumeClaim:
          claimName: registry-pvc
