kubernetes/registry/service-registry.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: registry
  namespace: default
spec:
  selector:
    app: registry
  ports:
  - name: http
    targetPort: 5000
    port: 5000
