kubernetes/registry/ingress-registry.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: registry
  namespace: default
  annotations:
    kubernetes.io/ingress.class: traefik-external
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`registry.local.probarra.xyz`)
      kind: Rule
      services:
        - name: registry
          port: 5000
      middlewares:
        - name: default-headers
  tls:
    secretName: # you secret name
